<resources>
    <string name="app_name">Eye Spy</string>

    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>Date Of Joining

    <string name="doj">Date Of Joining<font color="red"> *</font></string>
    <string name="fname">First Name<font color="red"> *</font></string>
    <string name="lname">Last Name<font color="red"> *</font></string>
    <string name="dob">Date Of Birth<font color="red"> *</font></string>
    <string name="mobileno">Mobile No.<font color="red"> *</font></string>
    <string name="email">E-Mail Id<font color="red"> *</font></string>
    <string name="permanentadd">Permanent Address<font color="red"> *</font></string>
    <string name="currentadd">Current Address<font color="red"> *</font></string>
    <string name="username">User Name<font color="red"> *</font></string>
    <string name="password">Password<font color="red"> *</font></string>
    <string name="conpassword">Confirm Password<font color="red"> *</font></string>
</resources>