<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>

<!-- Layout Code Start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registration Form"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/fname"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_MiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Middle Name"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/lname"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_DateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/dob"
                android:inputType="date"
                android:scrollbars="horizontal"
                android:drawableEnd="@drawable/ic_calendar"/>
            <EditText
                android:id="@+id/et_MobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobileno"
                android:inputType="number"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_AadharCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Aadhar Card No"
                android:inputType="number"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_PAN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="PAN Card"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_PassportNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Passport"
                android:scrollbars="horizontal"/>
            <EditText
                android:id="@+id/et_PermanentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/permanentadd"
                android:lines="5"
                android:scrollbars="horizontal"
                android:gravity="top|start"
                android:inputType="textCapSentences|textNoSuggestions|textMultiLine"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Same As Above" />
            <EditText
                android:id="@+id/et_CurrentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/currentadd"
                android:lines="5"
                android:scrollbars="horizontal"
                android:gravity="top|start"
                android:inputType="textCapSentences|textNoSuggestions|textMultiLine"/>
        </LinearLayout>
        <!-- Layout Code End -->
    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/levendar"
        android:layout_gravity="start">
        <include layout="@layout/nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>